# Language

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
.github/workflow/: test.yml
.github/workflows/: cmake.yml  codeql-analysis.yml
ext/cmake/llvm/: LLVMConfig.cmake  LLVMExports-debug.cmake  LLVMExports.cmake
ext/fmt-9.1.0/: CMakeLists.txt
src/: AST.cpp  AST.hpp  Parser.hpp  Prompt.hpp  Tokenizer.hpp  assembler_test.cpp  compiler.cpp  prompt.cpp  repl.cpp
src/asm/: Assembler.hpp  wasm.hpp
src/compiler/: DependencyTree.cpp  DependencyTree.hpp  Module.cpp  Module.hpp  ModuleInterface.hpp
src/core/: AST.cpp  AST.hpp  Config.hpp  Config.hpp.in  Error.hpp  Exception.hpp  FlyString.hpp  GenericValue.hpp  GlobalTemplateCache.cpp  GlobalTemplateCache.hpp  GlobalTemplateRegistry.hpp  GlobalTypeRegistry.cpp  GlobalTypeRegistry.hpp  Interpreter.hpp  Logger.hpp  Module.hpp  ModuleInterface.cpp  ModuleInterface.hpp  Parser.cpp  Parser.hpp  PrimitiveType.cpp  PrimitiveType.hpp  Scope.cpp  Scope.hpp  Source.cpp  Source.hpp  Token.hpp  Tokenizer.cpp  Tokenizer.hpp  ValueType.cpp  ValueType.hpp  VariableStore.hpp  het_unordered_map.hpp
src/core/formatters/: ASTFormat.hpp  TypeIDFormat.cpp  TypeIDFormat.hpp
src/jit/: JIT.hpp  LLVMJIT.hpp
src/repl/: Prompt.cpp  Prompt.hpp
src/utils/: CLIArg.hpp  string_utils.hpp  win_error.hpp
stdlib/: file.cpp  format.cpp  memory.cpp  print.cpp  socket.cpp
stdlib/exports/std/: Array.lang  File.lang  Socket.lang  String.lang  cstr.lang  memory.lang  print.lang
test/: interpreter.cpp  test.cpp  tokenizer.cpp
test/basic/: arithmetic.lang  declare_in_while.lang  float.lang  live.lang  while.lang
test/compiler/: FunctionCall.lang  HelloWorld.lang  IfPrintf.lang  array.lang  assign_u64_to_int.lang  basic_arthimetic.lang  cast_int_to_u64.lang  destructor.lang  file.lang  if.lang  import.lang  import_arg.lang  import_specialization.lang  mandelbrot.lang  mandelbrot_file.lang  mandlebrot.lang  math_intrinsics.lang  move_from_function.lang  nested_templates.lang  pointer.lang  print_text_file.lang  return_struct.lang  sizeof.lang  socket.lang  template_import.lang  templated_destructor.lang  templated_function.lang  templated_methods.lang  test_func.lang
test/compiler/include/: BasicGenericType.lang  TemplateSpecializationExport.lang  TemplateTest.lang  double.lang  module.lang
test/compiler/wip/: owning_ptr.lang
test/function/: call.lang  declaration.lang  fib.lang  fib_array.lang  prime.lang
test/other/: compiler_debug.lang  compiler_test.lang  http_server.lang  mandelbrot.lang  mandelbrot_for.lang
